--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -24,3 +24,16 @@
 .skills{
   padding: 5% 5%;
 }
+
+.projects{
+  padding: 0% 5%;
+}
+
+.contact{
+  padding: 10% 5%;
+}
+
+.footer{
+  padding-left: 3%;
+  box-sizing: border-box;
+}
